--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "concurrently": "^5.1.0"
   },
   "dependencies": {
-    "apollo-server-express": "^2.25.3",
+    "apollo-server-express": "^3.11.1",
+    "bootstrap": "^5.2.3",
     "express": "^4.17.2",
-    "graphql": "^15.8.0"
+    "graphql": "^15.8.0",
+    "react-bootstrap": "^2.7.0"
   }
 }
